--- a/pdfTextReader/packages.config
+++ b/pdfTextReader/packages.config
@@ -3,4 +3,6 @@
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Selenium.Chrome.WebDriver" version="85.0.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
 </packages>
