--- a/pdfTextReader/pdfTextReader.csproj
+++ b/pdfTextReader/pdfTextReader.csproj
@@ -65,7 +65,8 @@
     <Compile Include="Dispensary.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tools\DispensaryDownloader.cs" />
+    <Compile Include="Services\DispensaryListReader.cs" />
+    <Compile Include="Services\DispensaryDownloader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
