--- a/pdfTextReader/pdfTextReader.csproj
+++ b/pdfTextReader/pdfTextReader.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Dispensary.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Logger.cs" />
+    <Compile Include="Services\OutputService.cs" />
     <Compile Include="Services\DispensaryListReader.cs" />
     <Compile Include="Services\DispensaryDownloader.cs" />
   </ItemGroup>
