created class to contain all business logic and services to separate out logic

--- a/pdfTextReader/pdfTextReader.csproj
+++ b/pdfTextReader/pdfTextReader.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DispensaryIdentifier.cs" />
     <Compile Include="Common\Globals.cs" />
     <Compile Include="Common\WebDriver.cs" />
     <Compile Include="Page.cs" />
